# seed-quickstart-webpack

./: .gitignore  .travis.yml  .travis.yml_not_maintained  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  RELEASE_CHECKLIST.md  index.html  index.js  index.ts  optimize_wasm.js  package.json  postcss.config.js  postcss_rust_helpers.js  rustfmt.toml  tailwind.config.js  tsconfig.base.json  tsconfig.css_classes.json  tsconfig.ignore_index_ts.json  tsconfig.json  webpack.config.js  webpack.css_classes.config.js  webpack.only_css_config.js
.github/workflows/: main.yml
assets/: index.html
assets/css/: fonts.css
assets/favicons/: site.webmanifest
components/counter/: Cargo.toml
components/counter/src/: lib.rs
components/counter_interface/: Cargo.toml
components/counter_interface/src/: lib.rs
configs/: postcss.config.js  tsconfig.base.json  tsconfig.css_classes.json  webpack.config.js  webpack.css_classes.config.js
crate/: Cargo.toml  rustfmt.toml
crate/js/: get_random_number.js
crate/src/: app.rs  js_calls.rs  lib.rs  loading.rs  page.rs  request.rs  route.rs  rust_apis.rs  seed_helpers.rs  session.rs  storage.rs  ts_apis.rs
crate/src/coder/decoder/: error_messages.rs
crate/src/coder/encoder/: comment.rs
crate/src/entity/: author.rs  form.rs  image.rs  username.rs
crate/src/entity/article/: feed.rs
crate/src/entity/form/: article_editor.rs  login.rs  register.rs  settings.rs
crate/src/page/: about.rs  article.rs  article_editor.rs  home.rs  login.rs  mod.rs  not_found.rs  profile.rs  register.rs  settings.rs
crate/src/page/partial/: footer.rs  header.rs  mod.rs
crate/src/request/: author.rs  login.rs  register.rs  tag.rs
crate/src/request/article/: create.rs  delete.rs  load.rs  load_for_editor.rs  update.rs
crate/src/request/comment/: create.rs  delete.rs  load_list.rs
crate/src/request/favorite/: favorite.rs  unfavorite.rs
crate/src/request/feed/: load_for_home.rs  load_for_profile.rs
crate/src/request/follow/: follow.rs  unfollow.rs
crate/src/request/settings/: load.rs  update.rs
crate/src/ts/: clock.ts  helpers.ts  seed_helpers.ts
crate/tests/: test.rs
css/: custom.css  fonts.css  styles.css
design/resume/: resume.afdesign
design/web/: martin_kavik.afdesign  web.afdesign
entries/: index.css_classes.ts  index.hbs  index.html  index.ts
entries/templates/: head_scripts.hbs  loading_page.hbs  real_world_assets.hbs
js/: index.js
scripts/: optimize_wasm.js  postcss_rust_helpers.js
src/: _lib.rs.bup  lib.rs
src/component/: body.rs  button.rs  footer.rs  header.rs  mod.rs  todo_input.rs
src/model/: mod.rs  todo.rs
src/page/: about.rs  counter.rs  home.rs  mod.rs  not_found.rs
src/page/partial/: footer.rs  header.rs
src/view/: home.rs  mod.rs
static/: index.hbs
static/templates/: favicons.hbs  social_media.hbs
styles/: app.scss  custom.scss
