[package]
version = "0.1.0"
name = "kavik_cz"
repository = "https://github.com/MartinKavik/kavik.cz"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Personal website kavik.cz"
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
# Referenced commit fixes base url and memory bugs in Seed 0.7.0
# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
# Replace with "0.8.0" once the new Seed version is released.
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }
fixed-vec-deque = "0.1.9"
strum = "0.18.0"
strum_macros = "0.18.0"

[dependencies.web-sys]
version = "0.3.39"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
