[package]
version = "0.3.0"
name = "seed_qs_webpack"
repository = "https://github.com/seed-rs/seed-quickstart-webpack"
authors = ["Frank Panetta <frank@zuudo.com.au>"]
description = "Seed framework quick start template"
categories = ["wasm", "rust", "seed", "frontend"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[dependencies]
# Referenced commit fixes base url and memory bugs in Seed 0.7.0
# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
# Replace with "0.8.0" once the new Seed version is released.
seed = { git = "https://github.com/seed-rs/seed", rev = "b25cf59" }

[dependencies.web-sys]
version = "0.3.44"
features = [
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
