[package]
name = "counter_component"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.58"
atomic_refcell = "0.1.6"
counter_component_interface = { path = "../counter_interface" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
